# NateUtils

./: NateUtils.py  main.py  pyproject.toml  setup.py  slowprint.py
.github/workflows/: python-publish.yml  setup.py
